--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>hi</h1> 
+   <h1>hi Felicia bb!!!</h1> 
+   <IMG SRC="images/200w.gif">
+    <h1> how are you doing today?</h1>
+    <div>click one VVVV</div>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">good</a> 
+    <a href = "https://www.youtube.com/watch?v=w1Oo84eI8gY&ab_channel=FilmCow">great</>
 </body>
 </html>
