--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <IMG SRC="images/200w.gif">
     <h1> how are you doing today?</h1>
     <div>click one VVVV</div>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">good</a> 
+    <a href="https://www.youtube.com/watch?v=w1Oo84eI8gY&ab_channel=FilmCow">good</a> 
     <a href = "https://www.youtube.com/watch?v=w1Oo84eI8gY&ab_channel=FilmCow">great</>
 </body>
 </html>
